minor fixes :fire:

--- a/Slide in on Scroll/static/css/styles.css
+++ b/Slide in on Scroll/static/css/styles.css
@@ -29,6 +29,7 @@ h1 {
 .align-left {
 	float: right;
 	margin-right: 20px;
+	transform: translateX(30%) scale(0.95);
 }
 
 .slide-in {
@@ -36,15 +37,12 @@ h1 {
 	transition: all .5s;
 }
 
-.align-left .slide-in {
+.align-right {
 	transform: translateX(-30%) scale(0.95);
-}
-
-.align-right .slide-in {
-	transform: translateX(30%) scale(0.95);
 }
 
 .slide-in.active {
 	opacity: 1;
 	transform: translateX(0%) scale(1);
+	transition: transform 1.2s;
 }
